code13/app/client/mgb.css
.ui.sidebar {
  overflow: visible !important;
  z-index: 1000 !important
}

#root { 
  height: auto;
}

.no-events{
  pointer-events: none;
}

.map-filled, .map-empty{
  transition: .3s;
  min-height: 500px;
  transform-style: preserve-3d;
}
.map-filled.highlight-active-layer .no-events:not(.grid-layer){
  opacity: 0.5;
}

.tilemap-layer{
  position: absolute;
  width: 100%;
  height: 100%;
  transition: inherit;
  transform-origin: 50% 50% -200px;
}
.tileset{
  position: relative;
}
.bold.active{
  font-weight: bold;
}

body {
  -webkit-font-smoothing: antialiased;
}

.accept-drop{
  position: relative;
}

body.dragging .accept-drop:after{
  content: attr(data-drop-text);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
  height: 100%;
  background-color: rgba(255,255,255,0.5);
  text-align: center;
  font-size: 140%;
  border: solid 1px;
}
body.dragging .accept-drop:hover{
  background-color: rgba(255,255,255,0.9);
}


/* 3d preview */
.tilemap-wrapper{
  perspective: 2000px;
  -webkit-user-select: none;
  cursor: default;
}

/*.map-filled.preview{
  transform: rotatey(45deg) rotatex(5deg) scale(0.9);
  transform-style: preserve-3d;
}*/

.map-filled.preview:active{
  transition-duration: unset;
}

/* map editor properties */
.compact {
  margin-top: -19px;
}
.compact .compact > .ui.accordion .title.active,
.compact .compact > .ui.accordion div.label .title
{
  padding-bottom: 0 !important;
  padding-top: 3px !important;
  margin: 0 !important;
}
.compact .compact.ui.content.active {
  padding: 4px;
  margin: 0;
}
.compact .ui.input.fluid{
  padding-left: 30%;
}
.ui.styled.accordion .compact .accordion .active.title {
  padding-bottom: 0;
}
.ui.styled.accordion .compact .accordion .column > .title {
  padding: 0.1em 0 0 5px;
  position: absolute;
  background-color: #eee;
  z-index: 1;
  width: 38%;
  line-height: 26px;
  text-overflow: ellipsis;
  overflow: hidden;
  top: 1px;
  border-top-right-radius: 10px;
  border-bottom-right-radius: 10px;
  white-space: nowrap;
}
.compact .ui.input.fluid a {
  float: right;
  cursor: pointer;
}
.compact .title {
  position: relative;
}
.compact a.delete{
  display: block;
  width: 12px;
  height: 12px;
  background-color: red;
  position: absolute;
  right: 0;
  top: 0;
}
.ui.styled.accordion .compact .accordion div.label {
  padding: 0;
  position: relative;
}
.compact .ui.input > input,
.compact .ui.input > select,
.compact .ui.input > .dropdown{
  font-size: 10pt;
  padding: 0.3em 0.5em 0.3em 10%;
  margin: 2px 2px 2px 5px;
  min-height: 2em;
}
.compact > label .title{
  padding: 0.1em;
}

/* semantic hacks */
.icon.flip{
  transform: scaleX(-1);
}

.animate{
  transition: .3s !important;
  animation: zoomin;
}
.no-animate .animate{
  transition: 0s !important;
}

.Toolbar .ui.button.reset{
  position: absolute;
  height: 19px;
  padding: 0;
  margin: 0;
  right: 0;
  line-height: 19px;
}
.Toolbar.vertical  .ui.button.reset{
  right: auto;
  bottom: 0;
}
.Toolbar .button.main{
  z-index: 1;
}

.Toolbar .vertical{
  width: 100%;
}
.Toolbar .vertical *{
  width: 100%;
}
/* adjust button text to match width*/
.Toolbar .button div {
  font-size: calc(0.7vw + 20%);
  margin: 0 0 0 -10px;
  text-align: center;
  width: calc(100% + 20px);
  overflow: hidden;
  text-overflow: ellipsis;
}

.invisible{
  opacity: 0;
  display: none !important;
}
/* class that highlights element for short duration */
.ui .button.isvisible.hazPopup.new {
  animation-name: highlight !important;
  /*animation-iteration-count: infinite !important;*/
  animation-iteration-count: 1 !important;
  animation-duration: 0.75s !important;
  perspective: 1500px;
}
@keyframes blur {
  0%{
    background-color: red;
  }
  100%{
    
  }
}
@keyframes highlight {
  0%{
    /*transform: rotateY(-90deg);*/
    box-shadow: 0 0 5px 3px #000;
    /*background-color: rgba(255,0,0,0.7);*/
  }
  100%{
    /*transform: rotateY(360deg);*/
    box-shadow: 0 0 0 0 #000;
  }
}
@keyframes fadein {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* code editor */
.lint-error-text {
  display: none;
  position: absolute;
  white-space: pre;
  word-wrap: normal;
  background-color: red;
  border-radius: 5px;
  z-index: 100;
  left: 50px;
  padding: 1px 3px;
  border: solid 1px rgba(0,0,0,0.3);
}

.lint-error:hover .lint-error-text {
  display: block;
}

